--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 			<version>0.2.5-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+		    <groupId>info.freelibrary</groupId>
+		    <artifactId>freelib-iiif</artifactId>
+		    <version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>1.1</version>
