--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,9 +11,17 @@
         <filter-name>cross-origin</filter-name>
         <filter-class>org.eclipse.jetty.servlets.CrossOriginFilter</filter-class>
     </filter>
+    <filter>
+        <filter-name>iiif</filter-name>
+        <filter-class>info.freelibrary.iiif.IIIFServletFilter</filter-class>
+    </filter>
     <filter-mapping>
         <filter-name>cross-origin</filter-name>
         <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>iiif</filter-name>
+        <url-pattern>/iiif/*</url-pattern>
     </filter-mapping>
     <servlet>
         <servlet-name>resolver</servlet-name>
@@ -75,6 +83,14 @@
         <servlet-name>zoomViewer</servlet-name>
         <servlet-class>info.freelibrary.djatoka.view.ImageServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>iiifTest</servlet-name>
+        <servlet-class>info.freelibrary.iiif.InfoServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>iiifTest</servlet-name>
+        <url-pattern>/iiif/*</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>resolver</servlet-name> 
         <url-pattern>/resolve</url-pattern> 
