--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>info.freelibrary</groupId>
@@ -30,9 +29,9 @@
 			<version>0.2.5-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		    <groupId>info.freelibrary</groupId>
-		    <artifactId>freelib-iiif</artifactId>
-		    <version>0.0.1-SNAPSHOT</version>
+			<groupId>info.freelibrary</groupId>
+			<artifactId>freelib-iiif</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-cli</groupId>
@@ -111,6 +110,31 @@
 		</resources>
 		<plugins>
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<version>1.0-alpha-2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>set-system-properties</goal>
+						</goals>
+						<configuration>
+							<properties>
+								<!-- a llp2jlp-maven-plugin hack allows -->
+								<property>
+									<name>java.library.path</name>
+									<value>target/lib</value>
+								</property>
+								<property>
+									<name>logback.configurationFile</name>
+									<value>src/main/resources/logback.xml</value>
+								</property>
+							</properties>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>info.freelibrary</groupId>
 				<artifactId>llp2jlp-maven-plugin</artifactId>
 				<version>0.0.3-SNAPSHOT</version>
@@ -159,10 +183,6 @@
 							<value>2000000</value>
 						</systemProperty>
 						<systemProperty>
-							<name>logback.configurationFile</name>
-							<value>src/main/resources/logback.xml</value>
-						</systemProperty>
-						<systemProperty>
 							<name>DJATOKA_HOME</name>
 							<value>${project.basedir}</value>
 						</systemProperty>
@@ -206,7 +226,7 @@
 						<groupId>org.eclipse.jetty</groupId>
 						<artifactId>jetty-servlets</artifactId>
 						<version>8.1.2.v20120308</version>
-					</dependency>					
+					</dependency>
 				</dependencies>
 			</plugin>
 			<plugin>
@@ -220,19 +240,12 @@
 						</goals>
 					</execution>
 				</executions>
-				<configuration>
-					<systemProperties>
-						<systemProperty>
-							<key>logback.configurationFile</key>
-							<value>src/main/resources/logback.xml</value>
-						</systemProperty>
-					</systemProperties>
-				</configuration>
 			</plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -242,17 +255,35 @@
 							<pluginExecutions>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>
-											info.freelibrary
-										</groupId>
-										<artifactId>
-											llp2jlp-maven-plugin
-										</artifactId>
-										<versionRange>
-											[0.0.2,)
-										</versionRange>
+										<groupId>info.freelibrary</groupId>
+										<artifactId>llp2jlp-maven-plugin</artifactId>
+										<versionRange>[0.0.3-SNAPSHOT,)</versionRange>
 										<goals>
 											<goal>copy</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.codehaus.mojo</groupId>
+										<artifactId>properties-maven-plugin</artifactId>
+										<versionRange>[1.0-alpha-2,)</versionRange>
+										<goals>
+											<goal>set-system-properties</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
@@ -283,7 +314,8 @@
 		<cache.enabled>true</cache.enabled>
 		<!-- Supported: "", "sLUM", "sRGB", "sYCC", "iccLUM" or "iccRGB" -->
 		<djatoka.ingest.color.space>sRGB</djatoka.ingest.color.space>
-		<!-- If production, uses pairtree fs; else, builds hashmap of jp2 fs + pairtree fs -->
+		<!-- If production, uses pairtree fs; else, builds hashmap of jp2 fs + 
+			pairtree fs -->
 		<djatoka.is.production>false</djatoka.is.production>
 	</properties>
 	<profiles>
@@ -389,14 +421,10 @@
 	</pluginRepositories>
 </project>
 
-<!--
-	MAVEN_OPTS="-Djava.library.path=target/lib" mvn jetty:run-exploded
--->
-
-<!--
-	From: mvn dependency:analyze
-	[WARNING] Used undeclared dependencies found:
-	[WARNING]    org.slf4j:slf4j-api:jar:1.6.0:compile
-	[WARNING] Unused declared dependencies found:
-	[WARNING]    jai:mlibwrapper_jai:jar:0.0.0:system
--->
+<!-- From: mvn dependency:analyze
+[WARNING] Used undeclared dependencies found:
+[WARNING]    org.slf4j:slf4j-api:jar:1.6.0:compile
+[WARNING]    xml-apis:xml-apis:jar:1.3.03:compile
+[WARNING] Unused declared dependencies found:
+[WARNING]    info.freelibrary:freelib-iiif:jar:0.0.1-SNAPSHOT:compile
+ -->
