--- a/server/pom.xml
+++ b/server/pom.xml
@@ -10,7 +10,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>info.freelibrary</groupId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>freelib-djatoka</name>
+	<name>FreeLib Djatoka Image Server</name>
 	<artifactId>freelib-djatoka-server</artifactId>
 	<packaging>war</packaging>
 	<description>The FreeLibrary Djatoka Image Server</description>
