--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-/target
-/.classpath
-/.project
-/.settings
+# These files are dynamically created by the maven-dependency-plugin 
+src/main/resources/site
+src/main/resources/checkstyle
+
+# These files are dynamically created by the maven-resources-plugin
+src/site/markdown/coders-welcome.md
+src/site/markdown/testers-welcome.md
+src/site/markdown/documenters-welcome.md
+src/site/markdown/translators-welcome.md
