--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ src/test/resources/walters_id_map.csv
 src/test/resources/images/FSPC_Shak_005*
 src/test/resources/moire.csv
 jetty-memory.*
+
+freelib-djatoka.ipr
+freelib-djatoka.iml
