changed order of level, scale, region params to be consistent in all methods. minor tweaks

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,10 +46,10 @@
     <servlet-name>resolver</servlet-name>
     <url-pattern>/resolver</url-pattern>
   </servlet-mapping>
-  <servlet-mapping>
+  <!-- <servlet-mapping>
     <servlet-name>resolver</servlet-name>
     <url-pattern>/resolve</url-pattern>
-  </servlet-mapping>
+  </servlet-mapping> -->
   <!-- <servlet-mapping>
     <servlet-name>healthCheck</servlet-name>
     <url-pattern>/health</url-pattern>
