--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,9 +5,9 @@ log4j.appender.D1.DatePattern='.'yyyy-MM-dd
 log4j.appender.D1.layout=org.apache.log4j.PatternLayout
 log4j.appender.D1.layout.ConversionPattern=%d %-5p %c %m%n
 
-log4j.category.gov.lanl=DEBUG, D1
+log4j.category.gov.lanl=INFO, D1
 log4j.additivity.gov.lanl=false
-log4j.category.info.freelibrary=DEBUG, D1
+log4j.category.info.freelibrary=INFO, D1
 log4j.additivity.info.freelibrary=false
 log4j.category.info.openurl.oom=INFO, D1
 log4j.additivity.openurl.oom=false
